# marmemseg

./: .gitignore  Maritime-semantic-segmentation.txt  README.md  config.yaml  dvc.yaml  environtment.yaml  maritime-datasets-20220613.txt  params.yaml  pip_deps  pyproject.toml  requirements.txt  setup.cfg  spec_file.txt  test.py
.hydra/: config.yaml  hydra.yaml
configs/models/: finetuend_pspnet_r50-d8_512x1024_40k_cityscapes.py
docs/: segmentationExample.py
notebooks/: data_exploration.ipynb  inference.ipynb  training.ipynb
notebooks/work_dir/: None.log.json
scripts/data_extraction/: extract_mastr1325.bash  main.bash
src/marsemseg/datasets/: __init__.py  base.py  mastr1325.py
src/marsemseg/segmentors/: __init__.py  isegmentation.py
stages/: 1_define_splits.py  2_process_data.py
